css/main.css
/* ... */
.resources__column {
  padding: 0 1em;

  -webkit-box-flex: 1;
  -webkit-flex: 1;
      -ms-flex: 1;
          flex: 1;
}

.resources__column:first-child {
  padding-left: 0;
}

.resources__column:last-child {
  padding-left: 0;
}

.resources__column__heading {
  color: #40B26F;
}


.sponsors {
  background: #EDEDED;
}

.sponsors__buttons {
  text-align: center;
}

.sponsors__tier {
  border-bottom: 1px solid #dedede;
  text-align: center;
  padding-bottom: 40px;
  margin-bottom: 40px;
}

.sponsors__tier__title {
  color: rgb(200, 200, 200);
  font-weight: 300;
  margin-bottom: 40px;
  margin-top: 0;
}

.sponsors__tier__row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  /* margin-bottom: 60px; */
}

.sponsors__tier__row:last-child {
  margin-bottom: 0;
}

.sponsors__tier a {
  padding-bottom: 2em;
  padding-top: 2em;
  text-decoration: none;
}

.sponsors__tier img {
  margin-bottom: 1em;
  margin-top: 1em;
}

.sponsors__tier--platinum img {
  max-height: 6em;
}

.sponsors__tier--gold img {
  max-height: 6em;
  max-width: 22em;
}

.sponsors__tier--silver img {
  max-height: 5em;
  max-width: 16em;
}

.sponsors__tier--partner img {
  max-height: 4em;
  max-width: 19em;
}

.sponsors__tier--partner a {
  margin-left: 2em;
  margin-right: 2em;
}

.sponsors__tier .sponsor--pebble {
  max-width: 12em;
}

.sponsors__tier .sponsor--microsoft,
.sponsors__tier .sponsor--kloudless {
  max-height: 2.5em;
}


.faq__row {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.faq__row__item {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
      -ms-flex: 1;
          flex: 1;
}

.faq__row__item:first-child {
  padding-right: 3em;
}

.faq__row__item:last-child {
  padding-left: 3em;
}

.faq__row__item__question {
  color: #4D5666;
  font-family: "Karla";
  font-size: 1.375em;
  font-weight: bold;
  letter-spacing: 0.5px;
}

.faq__contact__icon {
  display: block;
  height: 1.563em;
  margin: 4em auto 3em;
  width: 2.500em;
}

.faq__contact__text {
  font-family: "karla";
  font-size: 1.250em;
  text-align: center;
}

.faq__contact__text a {
  color: #40B26F;
  text-decoration: none;
}

.faq__contact__text a:hover {
  color: #229050;
}

.footer {
  background: #EDEDED;
  padding: 1em;
}

.footer-container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.footer__about {
  color: #4D5666;
  font-size: 0.75em;
  letter-spacing: 0.5px;
}

.footer a {
  color: #4D5666;
}

.footer a:hover {
  color: #6F7888;
}

.footer__social__list {
  color: #4D5666;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: right;
}

.footer__social__list li {
  -webkit-box-align: center;
  -webkit-align-items: center;
      -ms-flex-align: center;
          align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.footer__social__list a {
  display: inline-block;
  padding: .5em;
  text-decoration: none;
}


/* ==========================================================================
   Media queries
   ========================================================================== */

@media only screen and (max-width : 950px) {
  .about__graphic {
    margin-left: 3em;
  }
}

@media only screen and (max-width : 850px) {

  .container {
    width: 90%;
  }

  /* Don't change the width of the header so the logo doesn't shift around */
  #header__container {
    width: auto;
  }

  .about__info-container {
    -webkit-box-orient: vertical;
    -webkit-box-direction: reverse;
    -webkit-flex-direction: column-reverse;
        -ms-flex-direction: column-reverse;
            flex-direction: column-reverse;
  }

  .about__graphic {
    margin: 3em auto;
  }

  .about__info {
    margin: auto;
    padding: 0 2em;
  }

  .schedule__table-container {
      -webkit-box-orient: vertical;
      -webkit-box-direction: normal;
      -webkit-flex-direction: column;
          -ms-flex-direction: column;
              flex-direction: column;
  }

  .schedule__table {
    margin: 20px auto;
    width:80%;
  }

  .faq__row__item:first-child {
    padding-right: 1.5em;
  }

  .faq__row__item:last-child {
    padding-left: 1.5em;
  }

}

@media only screen and (max-width: 600px) {

  .logo--header {
    margin: auto;
  }

  .header__cta__hackbu {
    width: 90%;
  }

  .header__cta__tagline__block__left {
    display: block;
    margin: 0;
    padding: 0;
    text-align: center;
    width: 100%;
  }

  .header__cta__tagline__divider {
    display: none;
  }

  .header__cta__tagline__block__right {
    display: block;
    margin: 0;
    padding: 0;
    text-align: center;
    width: 100%;
  }

  .header__navigation__list {
    display: none;
  }

  .map {
    height: 300px;
  }

  .faq__row {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -webkit-flex-direction: column;
        -ms-flex-direction: column;
            flex-direction: column;
  }

  .faq__row__item {
    padding: 0.5em 1.5em;
  }

  .section__title {
    text-align: center;
  }

  .resources__column-container {
    display: block;
  }

  .resources__column {
    padding: 0;
    margin: 2em 0;
  }

}
/* ... */

